<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/show_map_item"
        android:orderInCategory="100"
        android:title="@string/show_map"
        android:icon="@drawable/ic_action_map"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/new_place_item"
        android:orderInCategory="100"
        android:title="@string/new_place"
        android:icon="@drawable/ic_action_new"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/my_places_list_item"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_view_as_list"
        android:title="@string/my_places_list"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/about_item"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_about"
        android:title="@string/about"
        app:showAsAction="ifRoom"/>


</menu>