<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditMyPlaceActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_name_label"/>

    <EditText
        android:id="@+id/name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_desc_label"/>

    <EditText
        android:id="@+id/description_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <Button
            android:id="@+id/edit_finished_button"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/edit_cancel_button"
            android:layout_weight="1"
            android:text="@string/edit_button_cancel"/>

    </TableRow>

</LinearLayout>